--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,7 @@
               <%= f.label :"パスワード（確認用）", class: "control-label" %>
               <%= f.password_field :password_confirmation, autocomplete: "encrypted_password", class: 'form-control' %>
             </div>
-            <div class="col-12 my-3 text-right">
+            <div class="col-12 py-4 text-right">
               <%= f.submit "新規登録", class: "col-4 btn btn-success" %>
             </div>
         <% end %>
