--- a/app/views/users/quit_confirm.html.erb
+++ b/app/views/users/quit_confirm.html.erb
@@ -1,5 +1,5 @@
 	<h3 class="ml-4 mb-5">本当に退会しますか？</h3>
-<div class="container">
+<div class="contain">
 
   <div class="row">
     <div class="col-lg-12">
