--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -1,14 +1,20 @@
-<h1>Users#follows</h1>
-<p>Find me in app/views/users/follows.html.erb</p>
+<h1>フォロー</h1>
 
-<% @users.each do |user| %>
-  <hr>
-  <p><span>name: </span><%= link_to user.name, user_path(user.id) %></p>
-    <% if current_user != user %>
-        <% if user.followed_by?(current_user) %>
-            <p><%=link_to "フォロー済み", user_relationships_path(user.id), method: :delete %></p>
-        <% else %>
-            <p><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></p>
-        <% end %>
-    <% end %>
+<% if @users.exists? %>
+
+  <% @users.each do |user| %>
+    <p><span>name: </span><%= link_to user.name, user_path(user.id) %></p>
+      <% if current_user != user %>
+          <% if user.followed_by?(current_user) %>
+              <p><%=link_to "フォロー済み", user_relationships_path(user.id), method: :delete %></p>
+          <% else %>
+              <p><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></p>
+          <% end %>
+      <% end %>
+  <% end %>
+
+<% else %>
+
+ <p>フォローしているユーザーはいません</p>
+
 <% end %>
