--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -5,6 +5,12 @@
     display: none;
 }
 
+.prof_img {
+  border-radius: 4rem;
+  max-width: 100%;
+  height: auto;
+}
+
 #img_field {
   font-size: 15px;
   font-style: inherit;
