--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <%= form_with model:@post,local:true do |f| %>
     <div class="form-group">
-      <%= f.label :genre, "ジャンル" %>
+      <%= f.label :genre_id, "ジャンル" %>
       <%= f.collection_select :genre_id, Genre.all, :id, :name, prompt: "--選択してください--", size: "30", class: "form-control" %>
     </div>
     <div class="form-group">
