--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
 
     <div class="col-4 text-center">
-      <%= attachment_image_tag @user, :profile_image, class: "prof_img mb-1", id: "preview", size:"250", fallback: "no_image.jpg"%>
+      <%= attachment_image_tag @user, :profile_image, :fill, 200, 200, class: "prof_img mb-2", id: "preview", fallback: "no_image.jpg"%>
       <div class="item_image_btn">
         <%= f.attachment_field :profile_image, id: "file" %>
       </div>
