--- a/app/assets/stylesheets/contacts.scss
+++ b/app/assets/stylesheets/contacts.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the Contacts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#contact_body {
+  width: 100%;
+  height: 250px;
+}
+
+.contact_label {
+  font-size: 20px;
+  color: #AA8E4F;
+}
+
+.contact_name {
+  border-bottom: solid 1px;
+}
+
+.contact_email {
+  border-bottom: solid 1px;
+}
