--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,19 +1,23 @@
 <div class="container">
-  <%= form_with model:@post,local:true do |f| %>
-    <div class="form-group">
-      <%= f.label :genre_id, "ジャンル" %>
-      <%= f.collection_select :genre_id, Genre.all, :id, :name, prompt: "--選択してください--", size: "30", class: "form-control" %>
+  <div class="row justify-content-center">
+    <div class="col-6">
+      <%= form_with model:@post,local:true do |f| %>
+        <div class="form-group">
+          <%= f.label :genre_id, "ジャンル" %>
+          <%= f.collection_select :genre_id, Genre.all, :id, :name, prompt: "--選択してください--",  class: "form-control" %>
+        </div>
+        <div class="form-group my-4">
+          <%= f.label :title, "タイトル" %>
+          <%= f.text_field :title, class: 'form-control post_title' %>
+        </div>
+        <div class="form-group my-4">
+          <%= f.label :body, "本文" %>
+          <%= f.text_area :body, class: 'form-control post_body' %>
+        </div>
+        <div class="form-group text-right">
+          <%= f.submit "投 稿", class: 'btn btn-outline-light' %>
+        </div>
+      <% end %>
     </div>
-    <div class="form-group">
-      <%= f.label :title, "タイトル" %>
-      <%= f.text_field :title, class: 'form-control post_title' %>
-    </div>
-    <div class="form-group">
-      <%= f.label :body, "本文" %>
-      <%= f.text_area :body, class: 'form-control post_body' %>
-    </div>
-    <div class="form-group">
-      <%= f.submit class: 'btn btn-success' %>
-    </div>
-  <% end %>
+  </div>
 </div>
