--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto">
-  <%= attachment_image_tag user, :profile_image, class: "img-thumbnail", size:"250", fallback: "no_image.jpg" %>
+  <%= attachment_image_tag user, :profile_image, :fill, 200, 200, class: "prof_img", fallback: "no_image.png" %>
 </div>
 <div class="py-3">
     <%= user.name %>
@@ -41,7 +41,6 @@
 
 <% end %>
 
-
-<div class="py-3">
+  <div class="py-3">
     <%= user.introduction %>
   </div>
