--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,11 @@ body {
   color: #DFDBC4;
 }
 
+a {
+  color: #AA8E4F;
+}
+
+
 h3 {
   letter-spacing: 5px;
 }
@@ -48,14 +53,33 @@ header {
 }
 
 .header-li {
+  position: relative;
   padding: 30px 50px;
   color: #DFDBC4;
+  display: inline-block;
+  text-decoration: none;
+}
+
+.header-li::after {
+  position: absolute;
+  bottom: 50px;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 2px;
+  background: rgba(220, 220, 200, 0.3);
+  transform: scale(0, 1);
+  transform-origin: center top;
+  transition: transform .3s;
 }
 
 .header-li:hover {
   color: #AA8E4F;
   text-decoration: none;
-  background-color: rgba(51,51,51,0.9);
+}
+
+.header-li:hover::after {
+  transform: scale(1, 1);
 }
 
 #button {
@@ -64,6 +88,10 @@ header {
 }
 
 .container {
+  margin-top: 70px;
+}
+
+.container-fluid {
   margin-top: 70px;
 }
 
@@ -83,7 +111,10 @@ header {
   }
 
   .header-ul {
+    position: relative;
+    z-index: 1;
     letter-spacing: 0;
+    background-color: rgba(51,51,51,0.5);
   }
 
   .header-li {
