--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,13 +1,9 @@
 <% if post.liked_by?(current_user) %>
-  <p>
     <%= link_to post_likes_path(post.id), method: :delete, remote: true do %>
-      ♥<%= post.likes.count %> いいね
+      ♥:<%= post.likes.count %>
     <% end %>
-  </p>
 <% else %>
-  <p>
     <%= link_to post_likes_path(post.id), method: :post, remote: true do %>
-      ♡<%= post.likes.count %> いいね
+      ♡:<%= post.likes.count %>
     <% end %>
-  </p>
 <% end %>
