--- a/app/views/posts/_user_show.html.erb
+++ b/app/views/posts/_user_show.html.erb
@@ -1,18 +1,23 @@
-<div class="row post-conntent">
-  <div class="col-4 title-area">
-    <%= post.title %>
-    <%= link_to post.user.name ,user_path(post.user) %>
-    <%= post.genre.name %>
-    <div id = "likes<%= post.id %>" ><%= render  'likes/like',  post: post %></div>
-    <%= link_to post_comments_path(post.id) do %>
-    コメント<%= post.comments.count %>
-    <% end %>
-    <% if post.user == current_user %>
-      <%= link_to '編集', edit_post_path(post), class: "btn btn-sm btn-success edit_post_#{post.id}" %>
-    <% end %>
-  </div>
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="text-area">
+      <h2 class="text-center mb-3">〜<%= post.title %>〜</h2>
+      <div class="col-md-8 mx-auto mb-3 text-center">
+        <span class="col-2">投稿者：<%= link_to post.user.name ,user_path(post.user) %></span>
+        <span class="col-2">ジャンル：<%= post.genre.name %></span>
+        <span class="col-2" id = "likes<%= post.id %>" ><%= render  'likes/like',  post: post %></span>
+        <span class="col-2">
+          <%= link_to post_comments_path(post.id)  do %>
+            コメント:<%= post.comments.count %>
+          <% end %>
+        </span>
 
-  <div class="col-8 text-area">
-    <td><%= post.body %></td>
+        <% if post.user == current_user %>
+          <%= link_to '編集', edit_post_path(post), class: "btn btn-sm btn-success edit_post_#{post.id}" %>
+        <% end %>
+      </div>
+
+      <div class="col-md-7 mx-auto"><%= simple_format post.body %></div>
+    </div>
   </div>
 </div>
