--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,23 +17,26 @@
           <table class="table">
           <thead>
             <tr>
-              <th scope="col">ユーザー名</th>
-              <th scope="col">タイトル</th>
-              <th scope="col">ジャンル</th>
-              <th scope="col">本文</th>
-              <th scope="col">いいね</th>
-              <th scope="col">コメント</th>
+              <th class="col-1">ユーザー名</th>
+              <th class="col-1">タイトル</th>
+              <th class="col-1">ジャンル</th>
+              <th class="col-3">本文</th>
+              <th class="col-1">いいね</th>
+              <th class="col-1">コメント</th>
             </tr>
           </thead>
           <% @posts.each do |post| %>
           <tbody>
             <tr>
-              <td><%= post.user.name %></td>
-              <td><%= link_to post.title , post_path(post.id) %></td>
-              <td><%= post.genre.name %></td>
-              <td><%= post.body %></td>
-              <td><%= post.likes.count %></td>
-              <td><%= post.comments.count %>
+              <td class="col-1"><%= post.user.name %></td>
+              <td class="col-1"><%= link_to post.title , post_path(post.id) %></td>
+              <td class="col-1"><%= post.genre.name %></td>
+              <td class="col-3">
+                <div class="grad-item"><%= simple_format post.body %></div>
+                <div class="grad-btn text-right"><%= link_to "続きを読む" , post_path(post.id) %></div>
+              </td>
+              <td class="col-1"><%= post.likes.count %></td>
+              <td class="col-1"><%= post.comments.count %>
             </tr>
           </tbody>
           <% end %>
