--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -12,7 +12,7 @@
         </div>
         <div class="form-group my-4">
           <%= f.label :body, "本文" %>
-          <%= f.text_area :body, class: 'form-control post_body' %>
+          <%= f.text_area :body, class: 'form-control post_body', id: "textarea" %>
         </div>
         <div class="form-group text-right">
           <%= f.submit "投 稿", class: 'btn btn-outline-light' %>
