--- a/app/views/users/quit_confirm.html.erb
+++ b/app/views/users/quit_confirm.html.erb
@@ -1,22 +1,20 @@
-	<h3 class="ml-4 mb-5">本当に退会しますか？</h3>
-<div class="contain">
+<div class="container">
 
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="col-xs-12 messages">
-        <p class="col-lg-6 offset-md-3 mb-5 text-center">
-          退会すると、会員登録情報や
-          </br>
-          これまでの購入履歴が閲覧できなくなります。
-          </br>
-          退会する場合は、「退会する」をクリックしてください。
-        </p>
+  <div class="row justify-content-center">
+	  <h3 class="mb-5">本当に退会しますか？</h3>
+      <div class="col-lg-12">
+        <div class="col-lg-12 messages">
+          <p class="col-lg-6 offset-md-3 mb-5 text-center">
+            退会すると、会員登録情報や<br>
+            これまでの投稿が削除されます<br>
+            削除する場合は、「削除する」をクリックしてください。
+          </p>
+        </div>
+        <div class="col-lg-12 text-center">
+          <%= link_to "削除しない", user_path(current_user), class: "btn btn-primary table_button" %>
+          <%= link_to "削除する", user_path(current_user), method: :delete, data: {confirm: "本当に退会してもよろしいですか？"}, class: "btn btn-danger table_button offset-1" %>
+        </div>
       </div>
-    </div>
 
-    <div class="col-lg-10 offset-md-2">
-      <%= link_to "退会しない", user_path(current_user), class: "btn btn-primary table_button" %>
-      <%= link_to "退会する", user_path(current_user), method: :delete, data: {confirm: "本当に退会してもよろしいですか？"}, class: "btn btn-danger table_button" %>
-    </div>
   </div>
 </div>
