--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto">
-  <%= attachment_image_tag user, :profile_image, :fill, 200, 200, class: "prof_img", fallback: "no_image.png" %>
+  <%= attachment_image_tag user, :profile_image,  class: "prof_img", fallback: "no_image.png" %>
 </div>
 <div class="py-3">
     <%= user.name %>
