--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,19 +1,26 @@
-<div class="container">
-  <div class="comments">
-    <% @comments.each do |comment| %>
-      <%= comment.user.name %>
-      <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
-      <% if comment.user == current_user %>
-        <div class="comment-delete">
-          <%= link_to "削除",   post_comment_path(comment.post, comment), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger" %>
-        </div>
+<div class="container comment-box">
+  <h3 class="text-center">〜コメント一覧〜</h3>
+  <div class="row justify-content-center">
+    <div class=" col-sm-8 p-5 comments">
+      <% @comments.each do |comment| %>
+        <%= attachment_image_tag comment.user, :profile_image, class: "comment_img", fallback: "no_image.png" %>
+        <%= comment.user.name %>
+        <%= comment.created_at.strftime("%Y年%m月%d日 %H:%M:%S") %>
+        <%= comment.comment %>
+        <% if comment.user == current_user %>
+          <div class="comment-delete">
+            <%= link_to "削除",   post_comment_path(comment.post, comment), method: :delete, data: { confirm: '削除しますか？' }, class: "btn btn-sm btn-danger" %>
+          </div>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   </div>
-  <div class="new-comment">
-  <%= form_with(model:[@post, @new_comment], local: true) do |f| %>
-    <%= f.text_area :comment, placeholder: "コメントはこちら" %>
-    <%= f.submit "送信する" %>
-  <% end %>
-</div>
+  <div class="row justify-content-center my-3">
+    <div class="col-lg-8 new-comment">
+      <%= form_with(model:[@post, @new_comment], local: true) do |f| %>
+        <%= f.text_area :comment, class: "comment_form", id: "textarea", placeholder: "コメントはこちら" %>
+        <%= f.submit "送信", class: "btn-sm btn-light px-3" %>
+      <% end %>
+    </div>
+  </div>
 </div>
