--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,6 +1,6 @@
 <% if post.liked_by?(current_user) %>
     <%= link_to post_likes_path(post.id), method: :delete, remote: true do %>
-      ♥:<%= post.likes.count %>
+      <span class="text-danger">♥</span>:<%= post.likes.count %>
     <% end %>
 <% else %>
     <%= link_to post_likes_path(post.id), method: :post, remote: true do %>
