--- a/app/views/posts/_user_show.html.erb
+++ b/app/views/posts/_user_show.html.erb
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="text-area">
       <h2 class="text-center mb-3">〜<%= post.title %>〜</h2>
-      <div class="col-md-8 mx-auto mb-3 text-center">
+      <div class="col-md-8 mx-auto mb-3 text-center post_info">
         <span class="col-2">投稿者：<%= link_to post.user.name ,user_path(post.user) %></span>
         <span class="col-2">ジャンル：<%= post.genre.name %></span>
         <span class="col-2" id = "likes<%= post.id %>" ><%= render  'likes/like',  post: post %></span>
@@ -11,7 +11,6 @@
             コメント:<%= post.comments.count %>
           <% end %>
         </span>
-
         <% if post.user == current_user %>
           <%= link_to '編集', edit_post_path(post), class: "btn btn-sm btn-success edit_post_#{post.id}" %>
         <% end %>
