--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,24 +14,23 @@
  *= require_self
  */
 @import "bootstrap";
-@import 'font-awesome-sprockets';
-@import 'font-awesome';
-@import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
+@import "font-awesome-sprockets";
+@import "font-awesome";
+@import url("https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap");
 
 body {
   background-color: #222222;
-  color: #DFDBC4;
+  color: #dfdbc4;
 }
 
 a {
-  color: #AA8E4F;
+  color: #aa8e4f;
 }
 
 a:hover {
   color: #005640;
   text-decoration: none;
 }
-
 
 h3 {
   letter-spacing: 5px;
@@ -60,7 +59,7 @@ header {
 .header-li {
   position: relative;
   padding: 30px 50px;
-  color: #DFDBC4;
+  color: #dfdbc4;
   display: inline-block;
   text-decoration: none;
 }
@@ -69,17 +68,17 @@ header {
   position: absolute;
   bottom: 50px;
   left: 0;
-  content: '';
+  content: "";
   width: 100%;
   height: 2px;
   background: rgba(220, 220, 200, 0.3);
   transform: scale(0, 1);
   transform-origin: center top;
-  transition: transform .3s;
+  transition: transform 0.3s;
 }
 
 .header-li:hover {
-  color: #AA8E4F;
+  color: #aa8e4f;
   text-decoration: none;
 }
 
@@ -93,13 +92,13 @@ header {
 }
 
 .table {
-  color: #DFDBC4;
+  color: #dfdbc4;
 }
 
 /* タブレット横置きサイズ（1210px）以下の際に適用される設定 */
-@media screen and (max-width:1210px) {
+@media screen and (max-width: 1210px) {
   header {
-    background-color: rgba(51,51,51,0);
+    background-color: rgba(51, 51, 51, 0);
   }
 
   .header-nav {
@@ -111,7 +110,7 @@ header {
     position: relative;
     z-index: 1;
     letter-spacing: 0;
-    background-color: rgba(51,51,51,0.5);
+    background-color: rgba(51, 51, 51, 0.5);
   }
 
   .header-li {
@@ -120,7 +119,6 @@ header {
 
   .fa-bars {
     font-size: 40px;
-    color: #DFDBC4;
+    color: #dfdbc4;
   }
 }
-
