--- a/app/assets/stylesheets/contacts.scss
+++ b/app/assets/stylesheets/contacts.scss
@@ -5,6 +5,9 @@
 #contact_body {
   width: 100%;
   height: 250px;
+  outline: none;
+  color: #dfdbc4;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .contact_label {
