--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
     </div>
     <div class ="col-12">
 
-        <h3>投稿一覧</h3>
+        <h1 class="mb-4 text-center">〜投稿一覧〜</h1>
 
         <div class="jscroll scroll-list">
           <table class="table">
