投稿一覧レイアウト微調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,7 @@ a {
 }
 
 a:hover {
-  color: #005640;
+  color: #418372;
   text-decoration: none;
 }
 
@@ -78,7 +78,8 @@ header {
 }
 
 .header-li:hover {
-  color: #aa8e4f;
+  color: #418372;
+  // color: #aa8e4f;
   text-decoration: none;
 }
 
