--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
+
   <div class="row justify-content-center">
-    <div class="my-3 col-8">
+
+    <div class="my-3 col-8 text-center">
       <%= search_form_for @q, url: search_posts_path do |f| %>
         <%= f.label :genre_name_cont, 'ジャンル' %>
         <%= f.collection_select :genre_name_cont, Genre.all, :name, :name, include_blank: "選択して下さい" %>
@@ -9,43 +11,48 @@
         <%= f.submit '検索' %>
       <% end %>
     </div>
+
     <div class ="col-12">
 
         <h1 class="mb-4 text-center">〜投稿一覧〜</h1>
 
         <div class="jscroll scroll-list">
           <table class="table">
-          <thead>
-            <tr>
-              <th class="col-1">ユーザー名</th>
-              <th class="col-1">タイトル</th>
-              <th class="col-1">ジャンル</th>
-              <th class="col-3">本文</th>
-              <th class="col-1">いいね</th>
-              <th class="col-1">コメント</th>
-            </tr>
-          </thead>
-          <% @posts.each do |post| %>
-          <tbody>
-            <tr>
-              <td class="col-1"><%= post.user.name %></td>
-              <td class="col-1"><%= link_to post.title , post_path(post.id) %></td>
-              <td class="col-1"><%= post.genre.name %></td>
-              <td class="col-3">
-                <div class="grad-item"><%= simple_format post.body %></div>
-                <div class="grad-btn text-right"><%= link_to "続きを読む" , post_path(post.id) %></div>
-              </td>
-              <td class="col-1"><%= post.likes.count %></td>
-              <td class="col-1"><%= post.comments.count %>
-            </tr>
-          </tbody>
-          <% end %>
-        </table>
+            <thead>
+              <tr>
+                <th class="col-1">投稿日</th>
+                <th class="col-1">ユーザー名</th>
+                <th class="col-1">タイトル</th>
+                <th class="col-1">ジャンル</th>
+                <th class="col-2">本文</th>
+                <th class="col-1">いいね</th>
+                <th class="col-1">コメント</th>
+              </tr>
+            </thead>
+            <% @posts.each do |post| %>
+            <tbody>
+              <tr>
+                <td class="col-1"><%= post.created_at %></td>
+                <td class="col-1"><%= post.user.name %></td>
+                <td class="col-1"><%= link_to post.title , post_path(post.id) %></td>
+                <td class="col-1"><%= post.genre.name %></td>
+                <td class="col-2">
+                  <div class="grad-item"><%= simple_format post.body %></div>
+                  <div class="grad-btn"><%= link_to "続きを読む ➔" , post_path(post.id) ,class:"read-btn" %></div>
+                </td>
+                <td class="col-1"><%= post.likes.count %></td>
+                <td class="col-1"><%= post.comments.count %>
+              </tr>
+            </tbody>
+            <% end %>
+          </table>
           <%= paginate @posts %>
         </div>
 
-      </div>
+    </div>
+
   </div>
+
 </div>
 
       <%# @ranking.each.with_index(1) do | post, i | %>
