--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -9,19 +9,39 @@
 .grad-item {
   position: relative;
   overflow: hidden;
-  height: 70px;
+  height: 5rem;
+  margin-bottom: 10px;
 }
+
 .grad-item::before {
   display: block;
   position: absolute;
   border-radius: 2px;
-  opacity: 0.6;
+  opacity: 0.4;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 20px; /*グラデーションで隠す高さ*/
-  background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,  #DFDBC4 100%);
+  height: 20px;
+  /*グラデーションで隠す高さ*/
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0.8) 50%, #DFDBC4 100%);
   content: "";
+}
+
+.read-btn {
+  color: #418372;
+  background-color: rgba(220, 220, 220, 0.8);
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+  padding: 2px;
+  border: solid 1px;
+  border-radius: 5px;
+  font-size: 10px;
+}
+
+.read-btn:hover {
+  color: #418372;
+  background-color: rgb(220, 220, 220);
 }
 
 .post_info {
