--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -27,7 +27,7 @@
             <%= f.label :"お問合せ内容" %>
           </div>
           <div>
-            <%= f.text_area :body %>
+            <%= f.text_area :body ,class: "contact_body", id: "textarea" %>
           </div>
         </div>
 
