--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -35,7 +35,7 @@
         <p class="about-text">宝くじが当たったら. . .</p>
         <p class="about-text">ゾンビが現れたら. . .</p>
         <p class="about-text">もしも転生したら. . .</p>
-        <p class="about-text">ふとそんなことを考えたり友人と話し合ったりしたことはないですか？</p>
+        <p class="about-text">ふとそんなことを考えたり友人と話したことはないですか？</p>
         <p class="about-text">空想の樹は自分の頭の中にある空想や幻想を共有する投稿サイトです。</p>
         <h2 class="about-second">さあ、<br>あなたの想像した世界を解き放とう</h2>
       </div>
