--- a/app/assets/stylesheets/contacts.scss
+++ b/app/assets/stylesheets/contacts.scss
@@ -2,13 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#contact_body {
-  width: 100%;
-  height: 250px;
-  outline: none;
-  color: #dfdbc4;
-  background-color: rgba(0, 0, 0, 0);
-}
 
 .contact_label {
   font-size: 20px;
@@ -21,4 +14,13 @@
 
 .contact_email {
   border-bottom: solid 1px;
+}
+
+.contact_body {
+  width: 100%;
+  min-height: 250px;
+  outline: none;
+  border: solid 1px;
+  color: #dfdbc4;
+  background-color: rgba(0, 0, 0, 0);
 }
