--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -5,7 +5,7 @@
   position: fixed;
   top: 0px;
   right: 0px;
-  background-color: rgba(51,51,51,0.5);
+  background-color: rgba(51, 51, 51, 0.5);
   color: #fff;
   width: 350px;
   min-height: 100%;
@@ -72,6 +72,6 @@ video {
 }
 
 .about-second {
-  margin: 100px 0 100px 0;
+  margin: 50px auto;
   line-height: 100px;
 }
