--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,8 +20,8 @@
           <table class="table">
             <thead>
               <tr>
-                <th class="col-1">投稿日</th>
-                <th class="col-1">ユーザー名</th>
+                <th class="col-2"><%= sort_order "name", "投稿日" %></th>
+                <th class="col-2">ユーザー名</th>
                 <th class="col-1">タイトル</th>
                 <th class="col-1">ジャンル</th>
                 <th class="col-2">本文</th>
@@ -32,11 +32,11 @@
             <% @posts.each do |post| %>
             <tbody>
               <tr>
-                <td class="col-1"><%= post.created_at %></td>
+                <td class="col-1"><%= post.created_at.strftime("%Y年%m月%d日") %></td>
                 <td class="col-1"><%= post.user.name %></td>
-                <td class="col-1"><%= link_to post.title , post_path(post.id) %></td>
+                <td class="col-2"><%= link_to post.title , post_path(post.id) %></td>
                 <td class="col-1"><%= post.genre.name %></td>
-                <td class="col-2">
+                <td class="col-3">
                   <div class="grad-item"><%= simple_format post.body %></div>
                   <div class="grad-btn"><%= link_to "続きを読む ➔" , post_path(post.id) ,class:"read-btn" %></div>
                 </td>
