--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -46,7 +46,7 @@
             </tbody>
             <% end %>
           </table>
-          <%= paginate @posts %>
+          <div class="invisible"><%= paginate @posts %></div>
         </div>
 
     </div>
