--- a/app/views/posts/_guest_show.html.erb
+++ b/app/views/posts/_guest_show.html.erb
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="text-area">
       <h2 class="text-center mb-3">〜 <%= post.title %> 〜</h2>
-      <div class="col-md-12 mx-auto mb-3 text-center post_info">
+      <div class="col-md-12 mx-auto my-5 text-center post_info">
         <span class="col-2">投稿者：<%= link_to post.user.name ,user_path(post.user) %></span>
         <span class="col-2">ジャンル：<%= post.genre.name %></span>
         <span class="col-2">
@@ -15,7 +15,7 @@
         <% end %>
       </div>
 
-      <div class="col-md-7 mx-auto"><%= simple_format post.body %></div>
+      <div class="col-md-10 mx-auto post-area"><%= simple_format post.body %></div>
     </div>
   </div>
 </div>
