--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,20 +1,37 @@
-<h1>検索結果</h1>
-<table>
-  <thead>
-    <tr>
-      <th>本文</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class ="col-12">
 
-  <tbody>
-    <% @results.each do |post| %>
-      <tr>
-        <td><%= link_to post.user.name, user_path(post.user.id) %></td>
-        <td><%= link_to post.title , post_path(post.id) %></td>
-        <td><%= post.genre.name %></td>
-        <td>コメント件数：<%= post.comments.count %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <h1 class="mb-4 text-center">〜検索結果〜</h1>
+
+    <div class="jscroll scroll-list">
+      <table class="table">
+        <thead>
+          <tr>
+            <th class="col-2">投稿日</th>
+            <th class="col-2">ユーザー名</th>
+            <th class="col-1">タイトル</th>
+            <th class="col-1">ジャンル</th>
+            <th class="col-2">本文</th>
+            <th class="col-1">いいね</th>
+            <th class="col-1">コメント</th>
+          </tr>
+        </thead>
+        <% @results.each do |post| %>
+        <tbody>
+          <tr>
+            <td class="col-1"><%= post.created_at.strftime("%Y年%m月%d日") %></td>
+            <td class="col-1"><%= post.user.name %></td>
+            <td class="col-2"><%= link_to post.title , post_path(post.id) %></td>
+            <td class="col-1"><%= post.genre.name %></td>
+            <td class="col-3">
+              <div class="grad-item"><%= simple_format post.body %></div>
+              <div class="grad-btn"><%= link_to "続きを読む ➔" , post_path(post.id) ,class:"read-btn" %></div>
+            </td>
+            <td class="col-1"><%= post.likes.count %></td>
+            <td class="col-1"><%= post.comments.count %>
+          </tr>
+        </tbody>
+        <% end %>
+      </table>
+    </div>
+
+</div>
