投稿日時のソート機能追加

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -46,7 +46,7 @@
   color: #418372;
   background-color: rgba(220, 220, 220, 0.8);
   position: absolute;
-  bottom: 0;
+  bottom: 5px;
   right: 10px;
   padding: 2px;
   border: solid 1px;
