--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,8 +1,11 @@
 <div class="container-fluid">
-  <video class="video" playsinline muted autoplay >
-    <source src="https://fantasia-top.s3.ap-northeast-1.amazonaws.com/Fantasia_top.mp4" type="video/mp4" >
-  </video>
-    <div class="nav-img fadein"></div>
+  <div class="row">
+    <video class="video" playsinline muted autoplay >
+      <source src="https://fantasia-top.s3.ap-northeast-1.amazonaws.com/Fantasia_top.mp4?versionId=VSu5BEaC6C4ZJDJGHJMbdd6YFnf8FrC8" type="video/mp4" >
+    </video>
+  </div>
+
+  <div class="row nav-img fadein"></div>
 
   <div class="row">
     <div id="header-top">
