--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
-  <div class="row justify-content-end mb-5">
+  <div class="row justify-content-end">
     <%= search_form_for @q, url: search_posts_path do |f| %>
-      <%= f.label :body_cont, '本文' %>
       <%= f.search_field :body_cont, class:"search_box", placeholder:"キーワードを入力してください", size:"30" %>
       <%= f.submit '検索' %>
     <% end %>
   </div>
+  <div class="row justify-content-end"><%= link_to "最新の投稿を見る", search_posts_path %></div>
 
 
   <div class="row justify-content-center">
@@ -19,7 +19,7 @@
           <table class="table">
             <thead>
               <tr>
-                <th><%= sort_link(@q, :created_at, "投稿日") %></th>
+                <th>投稿日</th>
                 <th>ユーザー名</th>
                 <th>タイトル</th>
                 <th>ジャンル</th>
