--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -34,6 +34,7 @@
             </tbody>
             <% end %>
           </table>
+          <div class="invisible"><%= paginate @results %></div>
         </div>
 
     </div>
