--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -13,7 +13,7 @@
   z-index: 2;
 }
 
-.nav-img {
+#nav-img {
   background-image: image-url('korog.png');
   position: fixed;
   background-size: cover;
