--- a/app/views/posts/_user_show.html.erb
+++ b/app/views/posts/_user_show.html.erb
@@ -1,4 +1,6 @@
 <div class="container-fluid">
+	<div id="notice"><%= notice %></div>
+  <div id="alert"><%= alert %></div>
   <div class="row justify-content-center">
     <div class="text-area">
       <h2 class="text-center mb-3">〜<%= post.title %>〜</h2>
