--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-6">
-    <h1 class="mb-5 text-center">〜新規投稿〜</h1>
+	    <div><%= render 'layouts/error_messages', obj: @post %></div>
+      <h1 class="mb-5 text-center">〜新規投稿〜</h1>
       <%= form_with model:@post,local:true do |f| %>
         <div class="form-group">
           <%= f.label :genre_id, "ジャンル" %>
