--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -14,7 +14,7 @@
           <p><%= link_to user.name, user_path(user.id) %></p>
         <% end %>
       <% else %>
-        <p>フォロ-ユーザーはいません</p>
+        <p>フォロ-されているユーザーはいません</p>
       <% end %>
     </div>
 
