ゲストユーザーログイン後の遷移先変更

--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -14,7 +14,7 @@
           <p><%= link_to user.name, user_path(user.id) %></p>
         <% end %>
       <% else %>
-        <p>フォロ-しているユーザーはいません</p>
+        <p>フォローしているユーザーはいません</p>
       <% end %>
     </div>
 
